# htmldesignersite

./: .gitignore  FIXES_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  TIMEOUT_FIX_GUIDE.md  dev_documentation.md
backend/ai_api_module_v3/: .env.example  .gitignore  README.md  aiapimodule_documentation.md  pyproject.toml  requirements.txt  setup.py  validate_setup.py
backend/ai_api_module_v3/.cursor/rules/: anthropic-api-documentation.mdc  google-api-documentation.mdc  openai-api-documentation.mdc  project-documentation.mdc  xai-api-documentation.mdc
backend/ai_api_module_v3/ai_api_module/: __init__.py  bootstrap.py  cli.py  exceptions.py  quickstart.py
backend/ai_api_module_v3/ai_api_module/core/: __init__.py  ai.py  config.py  conversation.py  exceptions.py  memory.py  response.py  utils.py
backend/ai_api_module_v3/ai_api_module/features/: __init__.py  async_handler.py  caching.py  monitoring.py  security.py  streaming.py
backend/ai_api_module_v3/ai_api_module/models/: catalog.yaml  registry.py
backend/ai_api_module_v3/ai_api_module/providers/: __init__.py  base.py  (+5 more)
backend/ai_api_module_v3/docs/: api_reference.md  quickstart.md
backend/ai_api_module_v3/examples/: advanced_features.py  basic_usage.py  cost_management.py  multimodal_examples.py
backend/ai_api_module_v3/tests/: async_test.py  conftest.py  conversation_test.py  document_test.py  full_test.py  image_test.py  test_async.py  test_basic.py  test_core.py  test_cost_management.py  test_integration.py  test_memory.py  test_multimodal.py  test_providers.py  test_streaming.py  test_tools.py
(+39 files in other folders)
